# net_multi_connector

./: .gitignore  README.md  examples.py  pyproject.toml  requirements.txt
multi_connector/: net.py
tests/: net_test.py
