[tool.poetry]
name = "net_multi_connector"
version = "1.0.0"
description = ""
authors = ["sprootik"]

[tool.poetry.dependencies]
python = "^3.10"
netmiko = "^4.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
